--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "A Rust tool that recursively collects project source code files a
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/araea/code-collector"
 readme = "README.md"
-keywords = ["code", "collector", "markdown", "source-code", "rust", "cli"]
+keywords = ["code", "collector", "markdown", "source-code", "cli"]
 categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
